--- a/chunking_nu.ipynb
+++ b/chunking_nu.ipynb
@@ -155,20 +155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "38eaca3a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "RecursiveChunker.__init__() got an unexpected keyword argument 'chunk_overlap'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 188\u001b[39m\n\u001b[32m    178\u001b[39m sample_text = \u001b[33m\"\"\"\u001b[39m\n\u001b[32m    179\u001b[39m \u001b[33m# Agentic RAG\u001b[39m\n\u001b[32m    180\u001b[39m \u001b[33mRAG systems require smart chunking. \u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m    184\u001b[39m \u001b[33m2. Recursive is best for code.\u001b[39m\n\u001b[32m    185\u001b[39m \u001b[33m\u001b[39m\u001b[33m\"\"\"\u001b[39m\n\u001b[32m    187\u001b[39m orchestrator = AgenticChunkingOrchestrator()\n\u001b[32m--> \u001b[39m\u001b[32m188\u001b[39m \u001b[43morchestrator\u001b[49m\u001b[43m.\u001b[49m\u001b[43mprocess_document\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmanual.md\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msample_text\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdoc_001\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    189\u001b[39m orchestrator.save_results()\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 64\u001b[39m, in \u001b[36mAgenticChunkingOrchestrator.process_document\u001b[39m\u001b[34m(self, file_path, text_content, doc_id)\u001b[39m\n\u001b[32m     62\u001b[39m \u001b[38;5;66;03m# Strategy 2: Code/Markdown (Recursive)\u001b[39;00m\n\u001b[32m     63\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m strategy == \u001b[33m\"\u001b[39m\u001b[33mrecursive_markdown\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m64\u001b[39m     chunker = \u001b[43mRecursiveChunker\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     65\u001b[39m \u001b[43m        \u001b[49m\u001b[43mchunk_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1024\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     66\u001b[39m \u001b[43m        \u001b[49m\u001b[43mchunk_overlap\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m100\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# ~10% overlap\u001b[39;49;00m\n\u001b[32m     67\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     68\u001b[39m     raw_chunks = chunker.chunk(text_content)\n\u001b[32m     70\u001b[39m \u001b[38;5;66;03m# Strategy 3: Tabular (Custom Logic)\u001b[39;00m\n",
-      "\u001b[31mTypeError\u001b[39m: RecursiveChunker.__init__() got an unexpected keyword argument 'chunk_overlap'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating Embeddings...\n",
+      "Processing Complete. Outputs saved to output/\n"
      ]
     }
    ],
